# PathInfer

./: CMakeLists.txt  README.md  classes.txt  main.cpp
include/: Infer.h  detect_result.h  inference_pipeline.h  iou_utils.cuh  postprocess.h  preprocess.h  utils.h
src/: Infer.cpp  global_nms_cuda.cu  inference_pipeline.cpp  postprocess.cpp  postprocess_nms_cuda.cu  preprocess.cpp  preprocess_cuda.cu  utils.cpp
